--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@apollo/gateway": "^0.21.4",
-    "apollo-server": "^2.19.0",
+    "apollo-server-express": "^2.19.0",
     "graphql": "^15.4.0"
   }
 }
